--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mc2
 Title: Markov Chain Monte Carlo Samplers
-Version: 0.0.0.9001
+Version: 0.0.0.9002
 Authors@R: 
     person(given = "Juho",
            family = "Timonen",
@@ -12,11 +12,8 @@ License: GPL(>=3)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
-LinkingTo: 
-    Rcpp
 Imports: 
-    Rcpp,
-    ggplot2 (>= 3.2.1),
+    mvtnorm (>= 1.0-11)
 Suggests: 
     knitr,
     rmarkdown
