--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,8 @@ License: GPL(>=3)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
-Imports: 
+Imports:
+    ggplot2 (>= 3.2.1),
     mvtnorm (>= 1.0-11)
 Suggests: 
     knitr,
