--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mc2
 Title: Markov Chain Monte Carlo Samplers
-Version: 0.0.0.9002
+Version: 0.0.0.9003
 Authors@R: 
     person(given = "Juho",
            family = "Timonen",
@@ -13,8 +13,7 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 Imports:
-    ggplot2 (>= 3.2.1),
-    mvtnorm (>= 1.0-11)
+    ggplot2 (>= 3.2.1)
 Suggests: 
     knitr,
     rmarkdown
